--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width">
         <title>Visit NIAGARA</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="container"></div>
         <div class="pageWrapper">
             <nav>
                 <div class="nav-section-left">
@@ -53,6 +52,9 @@
                 <p>copyright team niagara LLC</p>
             </footer>
         </div>
-        <script src=""></script>
+        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/delaunay.js"></script>
+        <!-- <scipt src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenMax.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+        <script src="script.js"></script> 
     </body>
 </html>
