--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
         <div id="container"></div>
         <div class="pageWrapper">
             <nav>
-                <div class="nav-section-left">
-                    <ul>
-                        <li><a href="#mission">mission</a></li>
-                        <li><a href="#exp">experiences</a></li>
-                    </ul>
-                </div>
-                <div class="nav-section-right">
-                    <ul>
-                        <li><a href="#tickets">buy tickets</a></li>
-                        <li><a href="#about">description</a></li>
-                    </ul>
-                </div>
+                <!-- <div id="nav-section-left"> -->
+                    <a href="www.google.com">mission</a>
+                    <a href="#exp">experiences</a>
+                <!-- </div>
+                <div id="nav-section-right"> -->
+                        <a href="#tickets">tickets</a>
+                        <a href="#about">description</a>
             </nav>
             <div class="mainTitle">
                 <h3>THE</h3>
                 <h1>NIAGARA EXPERIENCE</h1>
             </div>
             <div class="heroVid">
-
+                <video src="files/niagara-sound-viz.mov"></video>
+                <!-- make cursor hammer -->
             </div>
             <div class="content">
 
