--- a/index.html
+++ b/index.html
@@ -11,26 +11,22 @@
         <div class="pageWrapper">
             <nav>
                 <!-- <div id="nav-section-left"> -->
-                    <a href="www.google.com">mission</a>
-                    <a href="#exp">experiences</a>
+                    <a href="index.html">mission</a>
+                    <a href="#content">experiences</a>
                 <!-- </div>
                 <div id="nav-section-right"> -->
                         <a href="#tickets">tickets</a>
-                        <a href="#about">description</a>
+                        <a href="#content">description</a>
             </nav>
             <div class="mainTitle">
-                <h3>THE</h3>
-                <h1>NIAGARA EXPERIENCE</h1>
+                <h1>GALLERY</h1>
             </div>
-            <div class="heroVid">
-                <video src="files/niagara-sound-viz.mov"></video>
-                <!-- make cursor hammer -->
+            <div class="gallery-content">
+               
             </div>
-            <div class="content">
-
-            </div>
-            <div class="newsletter">
-
+            
+            <div class="buy-tix">
+                    <button>BUY TICKETS</button>
             </div>
             <footer class="foot">
                 <div class="legal">
@@ -44,8 +40,12 @@
                         <li>Privacy Policy</li>
                         <li>Terms of Use</li>
                     </ul>
+                    <ul>
+                        <li>Customer Testimonials</li>
+                        <li>Refund Policy</li>
+                    </ul>
                 </div>
-                <p>copyright team niagara LLC</p>
+                <p>© 2022 Copyright Team Niagara LLC. All Rights Reserved</p>
             </footer>
         </div>
         <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/175711/delaunay.js"></script>
