--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="container"></div>
         <div class="pageWrapper">
             <nav>
                 <!-- <div id="nav-section-left"> -->
@@ -19,14 +18,14 @@
                         <a href="#content">description</a>
             </nav>
             <div class="mainTitle">
-                <h1>GALLERY</h1>
+                <h1>IMAGE GALLERY</h1>
             </div>
             <div class="gallery-content">
                
             </div>
             
             <div class="buy-tix">
-                    <button>BUY TICKETS</button>
+                <button>BUY TICKETS</button>
             </div>
             <footer class="foot">
                 <div class="legal">
