--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="container"></div>
         <div class="pageWrapper">
             <nav>
                 <!-- <div id="nav-section-left"> -->
@@ -14,8 +15,8 @@
                     <a href="#content">experiences</a>
                 <!-- </div>
                 <div id="nav-section-right"> -->
-                        <a href="#tickets">tickets</a>
-                        <a href="#content">description</a>
+                    <a href="#tickets">tickets</a>
+                    <a href="#content">description</a>
             </nav>
             <div class="mainTitle">
                 <h3>THE</h3>
