--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="pageWrapper">
+        <div class="body-pageWrapper">
             <nav>
                 <!-- <div id="nav-section-left"> -->
                     <a href="index.html">mission</a>
@@ -18,12 +18,37 @@
                         <a href="#content">description</a>
             </nav>
             <div class="mainTitle">
+                <h3>THE</h3>
                 <h1>IMAGE GALLERY</h1>
             </div>
-            <div class="gallery-content">
-               
-            </div>
             
+            <div class="buy-tix">
+                <button>BUY TICKETS</button>
+            </div>  
+
+            <div class="gallery-content">
+                <div class="heroVid-2">
+                    <video src="files/niagara-sound-viz.mov" width="100%" autoplay muted loop>
+                        Your browser does not support the video tag.
+                        </video>
+                    </video>
+                </div>
+                <section class="section-1">
+                    <img src="files/nigara-4.png">
+                    <img src="files/nigara-11.png">
+                    <img src="files/nigara-statue-2.png">
+                </section>
+                <section class="tag section-2">
+                    <img src="files/nigara-2.png">
+                    <img src="files/nigara-9.png">
+                    <img src="files/nigara-7.png">
+                </section>
+                <section class="tag section-3">
+                    <img src="files/nigara-3.png">
+                    <img src="files/nigara-6.png">
+                </section>
+            </div>
+
             <div class="buy-tix">
                 <button>BUY TICKETS</button>
             </div>
