--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
         <div id="container"></div>
         <div class="pageWrapper">
             <nav>
-                <!-- <div id="nav-section-left"> -->
-                    <a href="index.html">mission</a>
-                    <a href="#content">experiences</a>
-                <!-- </div>
-                <div id="nav-section-right"> -->
-                    <a href="#tickets">tickets</a>
-                    <a href="#content">description</a>
+                <a href="index.html">mission</a>
+                <a href="#content">experiences</a>
+                <a href="#tickets">tickets</a>
+                <a href="#content">description</a>    
             </nav>
+            <div class="separator">
+                <div id="left-line"></div>
+                <div id="right-line"></div>
+            </div>
             <div class="mainTitle">
                 <h3>THE</h3>
                 <h1>NIAGARA EXPERIENCE</h1>
             </div>
             <div class="heroVid">
-                <video src="files/niagara-hand-part.mov" width="100%" autoplay muted loop>
+                <video src="files/hero-vid.mp4" width="100%" autoplay muted loop>
                     Your browser does not support the video tag.
                     </video>
                 </video>
-                
-                <!-- make cursor hammer -->
             </div>
             <div class="content" id="content">
                 <div>
-                    <p>The Nigara Experience brings the traditional art gallery experience to virtual reality, granting audiences of various abilities, locations, and interests access to a sensational new world.<br><br> 
-                    The Niagara Experience is the most interactive and immersive artistic escapade available, and promises to activate senses you never even knew you had.<br><br>
+                    <p>The Nigara Gallery brings the traditional art gallery experience to virtual reality, granting audiences of various abilities, locations, and interests access to a sensational new world.<br><br> 
+                    The Niagara Experience is the most interactive and immersive artistic escapade available, and promises to activate senses you never knew you had.<br><br>
                     All from the comfort of your own home.</p>
                 </div>
                 <div class="content-item">
@@ -48,7 +47,7 @@
                         <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.</p>
                         <a href="gallery.html"><button>EXPLORE</button></a>
                     </div>
-                    <div><img src="files/nigara-10.png"></div>
+                    <div><img src="files/nigara-9.png"></div>
                 </div>
                 <div class="content-item">
                     <div><img src="files/Birdseye.PNG"></div>
