--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 </video>
             </div>
             <div class="content" id="content">
-                <div>
-                    <p>The Nigara Gallery brings the traditional art gallery experience to virtual reality, granting audiences of various abilities, locations, and interests access to a sensational new world.<br><br> 
-                    The Niagara Experience is the most interactive and immersive artistic escapade available, and promises to activate senses you never knew you had.<br><br>
-                    All from the comfort of your own home.</p>
+                <div class="headliner">
+                    <p>The <span style="color: #f2f910">Niagara Gallery</span> brings the traditional art gallery experience to virtual reality, granting audiences of various abilities, locations, and interests access to a sensational new world.<br><br> 
+                    The Niagara <span style="color: #51b9ff">Experience</span> is the most interactive and immersive artistic escapade available, and promises to activate senses you never knew you had.<br><br>
+                    <span style="color: #ed47ff">All from the comfort of your own home.</span></p>
                 </div>
                 <div class="content-item">
                     <div><img src="files/nigara-8.png"></div>
                     <div class="info">
-                        <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.</p>
+                        <p>Using Unreal Engine's Niagara system, we have created <span style="color: #00ff7b">nine unique, interactive</span> exhibitions. Each piece has unique physics and interactions from fluids, to foliage, to <span style="color: #ff007b">audio visualization</span> and more, but they all share the bright <span style="color: #22aeff">vibrance</span> of our colorful gallery.</p>
                         <a href="gallery.html"><button>EXPLORE</button></a>
                     </div>
                 </div>
                 <div class="content-item">
                     <div class="info">
-                        <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.</p>
+                        <p>Niagara is your <span style="color: #ff962d">sandbox</span>. Unlike most real-life and virtual immersive gallaries, the Niagara Experience gives <span style="color: #00ff00"><i>you</i></span> control of what you see, how you see it, and how you choose to interact with it. You call the shots here, and you can't go wrong.</p>
                         <a href="gallery.html"><button>EXPLORE</button></a>
                     </div>
                     <div><img src="files/nigara-9.png"></div>
@@ -52,7 +52,7 @@
                 <div class="content-item">
                     <div><img src="files/Birdseye.PNG"></div>
                     <div class="info">
-                        <p>lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet.</p>
+                        <p>This experience is not only <span style="color: #b16dff">ethereal and transformative</span>, but you are a key actor. Can you figure out how to beat the bottleneck and <span style="color: #ffb300">'break'</span> into the gallery? Hint: how did you get past the white wall and into this website...</p>
                         <a href="gallery.html"><button>EXPLORE</button></a>
                     </div>
                 </div>
