--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="files/StartSky.PNG">
             </div>
             <div class="testimone">
-                    <p id="text">"lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet."</p>
+                    <p id="text"> "it would be great to make the drum sound interactable with rain particles!"</p>
                     <p>– Peer Review</p>
             </div>
             <footer class="foot">
